prevent jumping layout on init();

--- a/Memosport/wwwroot/less/main.less
+++ b/Memosport/wwwroot/less/main.less
@@ -396,6 +396,7 @@ td
     z-index: 5;
 
     #ict-progress-menu-container {
+        display: none; // do not break layout on init html loading
         position: absolute;
         left: 0;
         top: 0;
